--- a/programs/puppet/Cargo.toml
+++ b/programs/puppet/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "puppet"
+name = "error"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "puppet"
+name = "error"
 
 [features]
 no-entrypoint = []
